# bookkeeping-agent

./: .gitignore  CONTEXT.md  README.md  TECH_DESIGN.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/: bookkeeping-agent.service.example
prompts/: modify.md  recognize.md
scripts/: deploy.sh
src/: __init__.py  config.py  main.py  prompts.py
src/channels/feishu/: app.py  cards.py  client.py
src/channels/web/: __init__.py  app.py
src/core/: actions.py  graph.py  schema.py  state.py
src/llm/: glm.py
src/storage/: bitable.py
