[project]
name = "bookkeeping-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.0",
    "lark-oapi>=1.6.5",
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pillow>=10.0.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "python-multipart>=0.0.29",
]
